--- a/select_from_diario.ipynb
+++ b/select_from_diario.ipynb
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12508\\1236665344.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_25732\\1236665344.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
      ]
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,53 +74,53 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 551544 entries, 0 to 551543\n",
+      "RangeIndex: 1075440 entries, 0 to 1075439\n",
       "Data columns (total 41 columns):\n",
-      " #   Column               Non-Null Count   Dtype         \n",
-      "---  ------               --------------   -----         \n",
-      " 0   index                551544 non-null  int64         \n",
-      " 1   FECHA                551544 non-null  datetime64[ns]\n",
-      " 2   GRUPO                551544 non-null  object        \n",
-      " 3   HORA                 551544 non-null  int64         \n",
-      " 4   ARL                  551544 non-null  int64         \n",
-      " 5   ESTADO_OPE           551544 non-null  object        \n",
-      " 6   PI_SOTR              551544 non-null  float64       \n",
-      " 7   ARL_ECON             551544 non-null  int64         \n",
-      " 8   EST_REMUN            551544 non-null  object        \n",
-      " 9   ENERGIA              551544 non-null  float64       \n",
-      " 10  PRECIO_NODO          551544 non-null  int64         \n",
-      " 11  PR_REM_ENERGIA       358808 non-null  float64       \n",
-      " 12  SMEC                 551544 non-null  object        \n",
-      " 13  POT_DISP             551544 non-null  float64       \n",
-      " 14  POT_OPE_CPO          495360 non-null  float64       \n",
-      " 15  COMPRA_SPOT          548760 non-null  float64       \n",
-      " 16  SCTD                 324022 non-null  float64       \n",
-      " 17  SCO                  324022 non-null  float64       \n",
-      " 18  PIND                 495360 non-null  float64       \n",
-      " 19  PINDPROG             495360 non-null  float64       \n",
-      " 20  PINDFORZ             495360 non-null  float64       \n",
-      " 21  POT_DISP_GAS         551544 non-null  float64       \n",
-      " 22  POT_DISP_RESERVA     0 non-null       object        \n",
-      " 23  GAS_NOMINADO         0 non-null       object        \n",
-      " 24  COSTO_406            551544 non-null  float64       \n",
-      " 25  REM_ADICIONAL        551544 non-null  int64         \n",
-      " 26  DESP_ECON            551544 non-null  object        \n",
-      " 27  CCM                  0 non-null       object        \n",
-      " 28  CFO                  74886 non-null   float64       \n",
-      " 29  CGN                  322710 non-null  float64       \n",
-      " 30  CGO                  5607 non-null    float64       \n",
-      " 31  POT_DISP_R19         495360 non-null  float64       \n",
-      " 32  FACTOR_KM            495360 non-null  float64       \n",
-      " 33  HORA_REPRESENTATIVA  202270 non-null  object        \n",
-      " 34  ENERG_GEN_TRANSAC    9681 non-null    float64       \n",
-      " 35  ENERG_OPE_TRANSAC    9681 non-null    float64       \n",
-      " 36  SOBREC_FORZ_PROPIO   0 non-null       object        \n",
-      " 37  PGENE_RES354         32832 non-null   float64       \n",
-      " 38  CGU_PROPIO           32832 non-null   float64       \n",
-      " 39  CGU_MEM              32832 non-null   float64       \n",
-      " 40  CGU_GAS_CEDIDO       32832 non-null   float64       \n",
+      " #   Column               Non-Null Count    Dtype         \n",
+      "---  ------               --------------    -----         \n",
+      " 0   index                1075440 non-null  int64         \n",
+      " 1   FECHA                1075440 non-null  datetime64[ns]\n",
+      " 2   GRUPO                1075440 non-null  object        \n",
+      " 3   HORA                 1075440 non-null  int64         \n",
+      " 4   ARL                  1075440 non-null  int64         \n",
+      " 5   ESTADO_OPE           1075440 non-null  object        \n",
+      " 6   PI_SOTR              1075440 non-null  float64       \n",
+      " 7   ARL_ECON             1075440 non-null  int64         \n",
+      " 8   EST_REMUN            1075440 non-null  object        \n",
+      " 9   ENERGIA              1075440 non-null  float64       \n",
+      " 10  PRECIO_NODO          1075440 non-null  int64         \n",
+      " 11  PR_REM_ENERGIA       703375 non-null   float64       \n",
+      " 12  SMEC                 1075440 non-null  object        \n",
+      " 13  POT_DISP             1075440 non-null  float64       \n",
+      " 14  POT_OPE_CPO          965952 non-null   float64       \n",
+      " 15  COMPRA_SPOT          1072248 non-null  float64       \n",
+      " 16  SCTD                 635599 non-null   float64       \n",
+      " 17  SCO                  635599 non-null   float64       \n",
+      " 18  PIND                 965952 non-null   float64       \n",
+      " 19  PINDPROG             965952 non-null   float64       \n",
+      " 20  PINDFORZ             965952 non-null   float64       \n",
+      " 21  POT_DISP_GAS         1075440 non-null  float64       \n",
+      " 22  POT_DISP_RESERVA     0 non-null        object        \n",
+      " 23  GAS_NOMINADO         0 non-null        object        \n",
+      " 24  COSTO_406            1075440 non-null  float64       \n",
+      " 25  REM_ADICIONAL        1075440 non-null  int64         \n",
+      " 26  DESP_ECON            1075440 non-null  object        \n",
+      " 27  CCM                  0 non-null        object        \n",
+      " 28  CFO                  149772 non-null   float64       \n",
+      " 29  CGN                  625260 non-null   float64       \n",
+      " 30  CGO                  11214 non-null    float64       \n",
+      " 31  POT_DISP_R19         965952 non-null   float64       \n",
+      " 32  FACTOR_KM            965952 non-null   float64       \n",
+      " 33  HORA_REPRESENTATIVA  397905 non-null   object        \n",
+      " 34  ENERG_GEN_TRANSAC    18132 non-null    float64       \n",
+      " 35  ENERG_OPE_TRANSAC    18132 non-null    float64       \n",
+      " 36  SOBREC_FORZ_PROPIO   0 non-null        object        \n",
+      " 37  PGENE_RES354         65664 non-null    float64       \n",
+      " 38  CGU_PROPIO           65664 non-null    float64       \n",
+      " 39  CGU_MEM              65664 non-null    float64       \n",
+      " 40  CGU_GAS_CEDIDO       65664 non-null    float64       \n",
       "dtypes: datetime64[ns](1), float64(24), int64(6), object(10)\n",
-      "memory usage: 172.5+ MB\n"
+      "memory usage: 336.4+ MB\n"
      ]
     }
    ],
