--- a/crear_tabla.ipynb
+++ b/crear_tabla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "server = 'DARCCVWSQL19'\n",
     "#server = 'DESKTOP-37ESKFT\\SQLEXPRESS'\n",
     "database = 'TAPI'\n",
-    "tabla = \"DiarioTest\""
+    "#tabla = \"DiarioTest\"\n",
+    "tabla = \"Hist_Bk\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,9 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "('42000', \"[42000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Incorrect syntax near the keyword 'PRIMARY'. (156) (SQLExecDirectW)\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 59\u001b[0m\n\u001b[0;32m     14\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'''\u001b[39m\u001b[38;5;124mCREATE TABLE \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtabla\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (\u001b[39m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124m    index PRIMARY KEY,\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124m    FECHA DATE,\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;124m    CGU_GAS_CEDIDO FLOAT,\u001b[39m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'''\u001b[39m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# Ejecutar la consulta\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[38;5;66;03m# Confirmar los cambios en la base de datosW\u001b[39;00m\n\u001b[0;32m     61\u001b[0m connection\u001b[38;5;241m.\u001b[39mcommit()\n",
+      "\u001b[1;31mProgrammingError\u001b[0m: ('42000', \"[42000] [Microsoft][ODBC Driver 17 for SQL Server][SQL Server]Incorrect syntax near the keyword 'PRIMARY'. (156) (SQLExecDirectW)\")"
+     ]
+    }
+   ],
    "source": [
     "# CREACION DE TABLA \n",
     "\n",
@@ -78,8 +91,8 @@
     "\n",
     "# TODO: Crear acá la tabla en la BBDD\n",
     "#  Consulta SQL\n",
-    "query = f'''CREATE TABLE DiarioTest (\n",
-    "    ID INT PRIMARY KEY,\n",
+    "query = f'''CREATE TABLE {tabla} (\n",
+    "    index PRIMARY KEY,\n",
     "    FECHA DATE,\n",
     "    GRUPO VARCHAR(50),\n",
     "    HORA INT,\n",
@@ -119,7 +132,7 @@
     "    PGENE_RES354 FLOAT,\n",
     "    CGU_PROPIO FLOAT,\n",
     "    CGU_MEM FLOAT,\n",
-    "    CGU_GAS_CEDIDO FLOAT\n",
+    "    CGU_GAS_CEDIDO FLOAT,\n",
     ")'''\n",
     "\n",
     "# Ejecutar la consulta\n",
@@ -129,6 +142,30 @@
     "# Cerrar el cursor\n",
     "cursor.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
