--- a/historicoCorregido_testdiario.ipynb
+++ b/historicoCorregido_testdiario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,48 @@
     "        fecha_siguiente = fecha_actual + timedelta(hours=23, minutes=59)\n",
     "        yield fecha_actual, fecha_siguiente\n",
     "        # Añadir un día para la próxima iteración\n",
-    "        fecha_actual += timedelta(days=1)"
+    "        fecha_actual += timedelta(days=1)\n",
+    "\n",
+    "def ultimo_dia_bd():\n",
+    "    server = 'DARCCVWSQL19'\n",
+    "    #server = 'DESKTOP-37ESKFT\\SQLEXPRESS'\n",
+    "    database = 'TAPI'\n",
+    "    tabla = 'DiarioTestAutomático'\n",
+    "\n",
+    "    connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
+    "\n",
+    "    # Conectar a la base de datos\n",
+    "    connection = pyodbc.connect(connection_string)\n",
+    "\n",
+    "    # Crear un cursor para ejecutar consultas\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    # TODO: Crear acá la tabla en la BBDD\n",
+    "    #  Consulta SQL\n",
+    "    query = f\"SELECT TOP 1 FECHA FROM {tabla} ORDER BY FECHA DESC\"\n",
+    "\n",
+    "    # Ejecutar la consulta\n",
+    "    df = pd.read_sql(query, connection)\n",
+    "\n",
+    "    # Cerrar el cursor\n",
+    "    cursor.close()\n",
+    "\n",
+    "    ultimo_dia = df['FECHA'][0]\n",
+    "\n",
+    "    # # Convertir la cadena a un objeto datetime\n",
+    "    # fecha_dt = datetime.strptime(ultimo_dia, \"%Y-%m-%d\")\n",
+    "\n",
+    "    # # Crear un objeto de zona horaria fija (-03:00)\n",
+    "    # zona_horaria = timezone(timedelta(hours=-3))\n",
+    "\n",
+    "    # # Agregar la zona horaria al objeto datetime\n",
+    "    # fecha_dt = fecha_dt.replace(tzinfo=zona_horaria)\n",
+    "\n",
+    "    # # Formatear el datetime como una cadena con el método isoformat()\n",
+    "    # fecha_formateada = fecha_dt.isoformat()\n",
+    "    \n",
+    "    return ultimo_dia\n",
+    "    "
    ]
   },
   {
@@ -49,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_15756\\90039350.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     },
@@ -86,7 +127,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_15756\\90039350.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F469D8CE2F9A7C8003258B1700780F44\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93A4B4DFF0484E0103258B18006C8D48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     }
@@ -97,16 +168,6 @@
     "#server = 'DESKTOP-37ESKFT\\SQLEXPRESS'\n",
     "server = 'DARCCVWSQL19'\n",
     "database = 'TAPI'\n",
-    "\n",
-    "server = 'DARCCVWSQL19'\n",
-    "database = 'TAPI'\n",
-    "tabla = 'DiarioTestAutomático'\n",
-    "\n",
-    "fecha_desde = TAPI.ultimo_dia_bd()\n",
-    "fecha_hasta = TAPI.ultimo_dia_CAMM()\n",
-    "\n",
-    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\"\n",
-    "fecha_hasta = fecha_hasta+\"T00:00:00.000-03:00\"\n",
     "\n",
     "#1\n",
     "#-------------------------------------------------------#\n",
@@ -122,8 +183,11 @@
     "#-------------------------------------------------------#\n",
     "# Fechas para seleccionar el día de la carga se debe iterar\n",
     "\n",
-    "fecha_desde = TAPI.ultimo_dia_bd()\n",
+    "fecha_desde = TAPI.ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
     "fecha_hasta = TAPI.ultimo_dia_CAMM()\n",
+    "\n",
+    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\"\n",
+    "fecha_hasta = fecha_hasta+\"T00:00:00.000-03:00\"\n",
     "\n",
     "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\"\n",
     "fecha_hasta = fecha_hasta+\"T00:00:00.000-03:00\"\n",
@@ -285,15 +349,15 @@
     "        #6\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        df_filtrado.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        \n",
+    "        #df_filtrado.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
     "        #df_contratos.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "\n",
+    "        dfout = pd.concat([dfout,df_filtrado], ignore_index=True)\n",
+    "\n",
+    "        dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
     "        #-------------------------------------------------------#\n",
-    "\n",
-    "\n",
-    "        #dfout = pd.concat([dfout,df_filtrado], ignore_index=True)\n",
-    "\n",
-    "        #dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
     "\n",
     "    except FileNotFoundError:\n",
     "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")"
